--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -11,6 +11,9 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions: # <--- ADD THIS BLOCK
+      id-token: write # Required for OIDC authentication to AWS
+      contents: read # Allows checking out code
 
     steps:
       - name: Checkout Repository
@@ -47,6 +50,6 @@ jobs:
         # The build output is usually in ./portfolio/build, so we sync from there.
         # Ensure 'build' folder is inside 'portfolio' after npm run build
         run: |
-          aws s3 sync ./portfolio/build/ s3://mburu.nkonge --delete --cache-control max-age=31536000 # <--- Changed here
-          aws s3 cp ./portfolio/build/index.html s3://mburu.nkonge/index.html --cache-control no-cache # <--- Changed here
-          aws s3 cp ./portfolio/build/asset-manifest.json s3://mburu.nkonge/asset-manifest.json --cache-control no-cache # <--- Changed here
+          aws s3 sync ./portfolio/build/ s3://mburu.nkonge --delete --cache-control max-age=31536000
+          aws s3 cp ./portfolio/build/index.html s3://mburu.nkonge/index.html --cache-control no-cache
+          aws s3 cp ./portfolio/build/asset-manifest.json s3://mburu.nkonge/asset-manifest.json --cache-control no-cache
